--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h2 {
   object-fit: cover;
   border: 0.25rem solid black;
   border-radius: 10px;
-  object-fit: contain;
+  object-fit: fill;
 }
 .menu-items {
   display: flex;
